force-app/main/default/objects/Asset_Audit__c/Asset_Audit__c.object-meta.xml
<CustomObject>
    <label>Asset Audit</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Asset Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>