force-app/main/default/objects/Asset_Audit__c/fields/Lat_Lng__c.field-meta.xml
<CustomField>
    <fullName>Lat_Lng__c</fullName>
    <label>Lat Lng</label>
    <length>255</length>
    <type>Text</type>
</CustomField>