force-app/main/default/objects/Asset_Audit__c/fields/Outlet_Id__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Audits</relationshipLabel>
    <relationshipName>Asset_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>