force-app/main/default/objects/Asset_Audit__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Not Found at Location</fullName>
            </value>
            <value>
                <fullName>Outlet Closed During Visit</fullName>
            </value>
            <value>
                <fullName>Time Constraint During Visit</fullName>
            </value>
            <value>
                <fullName>Misplaced / Shifted To New Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>