force-app/main/default/objects/Asset_Audit__c/fields/Skip__c.field-meta.xml
<CustomField>
    <fullName>Skip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip</label>
    <type>Checkbox</type>
</CustomField>