force-app/main/default/objects/Asset_Audit__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Asset Audits</relationshipLabel>
    <relationshipName>Asset_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>