force-app/main/default/objects/Asset_Audit__c/fields/Visit_Offline_Id__c.field-meta.xml
<CustomField>
    <fullName>Visit_Offline_Id__c</fullName>
    <label>Visit Offline Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>