force-app/main/default/objects/Asset_Audit__c/fields/Visit_Task__c.field-meta.xml
<CustomField>
    <fullName>Visit_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Task</label>
    <referenceTo>Visit_Task__c</referenceTo>
    <relationshipLabel>Asset Audits</relationshipLabel>
    <relationshipName>Asset_Audits1</relationshipName>
    <type>Lookup</type>
</CustomField>